[gd_scene load_steps=5 format=3 uid="uid://cvmtnx0a3gud4"]

[ext_resource type="Script" path="res://hud.gd" id="1_8amxe"]
[ext_resource type="FontFile" uid="uid://bh885j20kgm5v" path="res://fonts/Xolonium-Regular.ttf" id="1_plo6j"]

[sub_resource type="InputEventAction" id="InputEventAction_mwloa"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_ml83c"]
events = [SubResource("InputEventAction_mwloa")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8amxe")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_right = 45.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_plo6j")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_plo6j")
theme_override_font_sizes/font_size = 64
text = "DODGE LES CREEPS"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_plo6j")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_ml83c")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GradingLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 90.0
offset_right = 240.0
offset_bottom = 129.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_plo6j")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
